--- a/mathematica/static/html/mathematica.html
+++ b/mathematica/static/html/mathematica.html
@@ -1,6 +1,9 @@
 <div class="mathematica_block">
     <object width="100%" height="600" type="application/vnd.wolfram.mathematica">
         <param name="src" value="{self.href}">
-        <embed width="100%" height="600" src="{self.href}" type="application/vnd.wolfram.mathematica">
+        <embed width="100%" height="600" src="{self.href}" type="application/vnd.wolfram.mathematica" pluginspage="http://www.wolfram.com/products/player/download.cgi" autoresize="true">
     </object>
 </div>
+
+
+
