added alternative content when cdf player does not exist

--- a/mathematica/static/html/mathematica.html
+++ b/mathematica/static/html/mathematica.html
@@ -1,7 +1,12 @@
 <div class="mathematica_block">
     <object width="100%" height="600" type="application/vnd.wolfram.mathematica">
+        <p>
+            You need the cdf player plugin to see this working download it from here:
+            <a href="http://www.wolfram.com/cdf-player/" target="_blank" class="mathematica_logo"> <div width="165" height="36"></div></a>
+        </p>
         <param name="src" value="{self.href}">
         <embed width="100%" height="600" src="{self.href}" type="application/vnd.wolfram.mathematica" pluginspage="http://www.wolfram.com/products/player/download.cgi" autoresize="true">
+
     </object>
 </div>
 
